# API-HUB

./: .gitignore
apps/backend/: pyproject.toml
apps/backend/alembic/versions/: 1e830b1949a6_add_usage_record_model.py  8c318f885b42_add_api_variant_model.py  c70f4fc4dfc8_add_subscription_model.py
apps/backend/src/: main.py
apps/backend/src/middleware/: auth.py
apps/backend/src/models/: subscription.py  usage_record.py
apps/backend/src/services/: auth_service.py  email_service.py
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/dashboard/: page.tsx
apps/frontend/app/launch/: page.tsx
apps/frontend/components/reusable/: Header.tsx
