[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naija-api-hub"
version = "1.0.0"
description = "API marketplace for Nigerian developers"
authors = [{ name = "Naija API Hub Team", email = "team@naijaapihub.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
keywords = ["api", "marketplace", "fastapi", "nigeria"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies
dependencies = [
    # Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.1.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Cache & Rate Limiting
    "redis>=5.0.1",
    "slowapi>=0.1.9",

    # Background Tasks
    "celery>=5.3.0",

    # Payments
    "stripe>=10.0.0",

    # Email
    "resend>=2.0.0",

    # Logging
    "loguru>=0.7.2",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "python-dateutil>=2.9.0",

    # API Documentation
    "scalar-fastapi>=0.1.0", # <-- ADD THIS LINE
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "watchfiles>=0.21.0",
]

[project.urls]
Homepage = "https://naijaapihub.com"
Repository = "https://github.com/yourusername/naija-api-hub"
Documentation = "https://docs.naijaapihub.com"

# ============================================================
# Black (Code Formatter)
# ============================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic/versions
)/
'''

# ============================================================
# Ruff (Linter - replaces flake8, isort, etc.)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff specific rules
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex (we'll handle manually)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # allow unused imports in __init__.py
"tests/**/*.py" = ["S101"] # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

# ============================================================
# Mypy (Static Type Checker)
# ============================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["alembic.*", "stripe.*", "resend.*", "slowapi.*", "celery.*"]
ignore_missing_imports = true

# ============================================================
# Pytest (Testing)
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================================
# Coverage (Code Coverage)
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/migrations/*",
    "*/alembic/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ============================================================
# Celery (Background Tasks)
# ============================================================
[tool.celery]
broker_url = "redis://localhost:6379/0"
result_backend = "redis://localhost:6379/0"
task_serializer = "json"
result_serializer = "json"
accept_content = ["json"]
timezone = "Africa/Lagos"
enable_utc = true
task_track_started = true
task_time_limit = 1800                      # 30 minutes
task_soft_time_limit = 1200                 # 20 minutes

# ============================================================
# Pydantic (Settings)
# ============================================================
[tool.pydantic]
init_typed = true
warn_required_dynamic_aliases = true

# ============================================================
# Bandit (Security - optional, run separately)
# ============================================================
[tool.bandit]
exclude_dirs = ["tests", "migrations", "alembic", ".venv"]
skips = ["B101", "B311"]                                   # skip assert and random warnings
